--- a/shooting/index.html
+++ b/shooting/index.html
@@ -17,15 +17,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Take aim and play shooting games at FAF Games, featuring a collection of unblocked games online, including action, adventure, and skill games, free to play.">
+    <meta name="description" content="Take aim and play shooting games at 76 Unblocked Games, featuring a collection of unblocked games online, including action, adventure, and skill games, free to play.">
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
-    <meta name="author" content="FAF Games Team">
-	 <link rel="canonical" href="/shooting/index.html" />
+    <meta name="author" content="76 Unblocked Games">
+	 <link rel="canonical" href="https://76-unblockedgames.github.io/shooting/index.html" />
 
-	<meta name="publisher" content="FAF Games Team">
+	<meta name="publisher" content="76 Unblocked Games">
 	
     <!-- Title -->
-    <title>Shooting Games 🔫 | Unblocked Games | FAF Games</title>
+    <title>Shooting Games 🔫 | Unblocked Games | 76 Unblocked Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -69,7 +69,7 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="menu-toggle"></span>
             </button>
@@ -205,7 +205,7 @@ Shooting games, a popular video game genre, offer players the thrill of virtual 
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
                                             <a href="/game/gunspin.html">
-                                                <img src="https://faf-games.github.io/assets/img/gunspin/gunspin.png"alt="Gunspin" />
+                                                <img src="https://76-unblockedgames.github.io/assets/img/gunspin/gunspin.png"alt="Gunspin" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
@@ -233,7 +233,7 @@ Shooting games, a popular video game genre, offer players the thrill of virtual 
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
                                             <a href="/game/shell-shockers.html">
-                                                <img src="https://faf-games.github.io/assets/img/shell-shockers/shellshockers.png" alt="Shell Shockers" />
+                                                <img src="https://76-unblockedgames.github.io/assets/img/shell-shockers/shellshockers.png" alt="Shell Shockers" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
@@ -611,7 +611,7 @@ Shooting games, a popular video game genre, offer players the thrill of virtual 
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -657,7 +657,7 @@ Shooting games, a popular video game genre, offer players the thrill of virtual 
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
