--- a/privacy.html
+++ b/privacy.html
@@ -4,11 +4,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Faf | Gaming HTML Template from Themescare">
+    <meta name="description" content="76 Unblocked Games | Gaming HTML Template from Themescare">
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
     <meta name="author" content="Themescare">
     <!-- Title -->
-    <title>Privacy Policy | FAF Games</title>
+    <title>Privacy Policy | 76 Unblocked Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -206,9 +206,9 @@ section.fag-contact-details-area {
             <div class="row">
                 <div class="col-12">
                     <div class="single-contact-box">
-                        <h1>Privacy Policy for FAF Games (faf-games.github.io)</h1>
+                        <h1>Privacy Policy for 76 Unblocked Games (76-unblockedgames.github.io)</h1>
 
-                        <p>At FAF Games, accessible from <a href="https://faf-games.github.io">faf-games.github.io</a>, we prioritize the privacy of our visitors. This Privacy Policy outlines the types of information collected and recorded by FAF Games and how we use it.</p>
+                        <p>At 76 Unblocked Games, accessible from <a href="https://76-unblockedgames.github.io">76-unblockedgames.github.io</a>, we prioritize the privacy of our visitors. This Privacy Policy outlines the types of information collected and recorded by 76 Unblocked Games and how we use it.</p>
 
                         <h2>Information We Collect</h2>
                         <p>We collect information in several ways, including:</p>
