--- a/privacy.html
+++ b/privacy.html
@@ -208,37 +208,36 @@ section.fag-contact-details-area {
                     <div class="single-contact-box">
                         <h1>Privacy Policy for 76 Unblocked Games (76-unblockedgames.github.io)</h1>
 
-                        <p>At 76 Unblocked Games, accessible from <a href="https://76-unblockedgames.github.io">76-unblockedgames.github.io</a>, we prioritize the privacy of our visitors. This Privacy Policy outlines the types of information collected and recorded by 76 Unblocked Games and how we use it.</p>
+                        <p>At <strong>76 Games Hub</strong>, accessible from <a href="https://76-unblockedgames.github.io" target="_blank">https://76-unblockedgames.github.io</a>, your privacy is important to us. This Privacy Policy describes what information we collect and how we use it.</p>
 
-                        <h2>Information We Collect</h2>
-                        <p>We collect information in several ways, including:</p>
-                        <ul>
-                            <li><strong>Cookies:</strong> To enhance user experience and serve personalized ads through third-party services like Google AdSense.</li>
-                            <li><strong>Usage Data:</strong> Information on how you use our website, including pages visited, time spent on the site, and other statistics.</li>
-                        </ul>
+  <h2>Information We Collect</h2>
+  <ul>
+    <li><strong>Cookies:</strong> Used to enhance your experience and display relevant ads via services like Google AdSense.</li>
+    <li><strong>Usage Data:</strong> Includes pages visited, time spent on the website, and interaction details.</li>
+  </ul>
 
-                        <h2>How We Use the Information</h2>
-                        <p>We use the information to:</p>
-                        <ul>
-                            <li>Improve user experience.</li>
-                            <li>Serve relevant ads through Google AdSense and other third-party networks.</li>
-                            <li>Understand how users interact with the site and enhance content and layout.</li>
-                        </ul>
+  <h2>How We Use the Information</h2>
+  <ul>
+    <li>To improve website features and user experience.</li>
+    <li>To display personalized advertisements through advertising partners like Google AdSense.</li>
+    <li>To analyze how visitors use the website for optimization purposes.</li>
+  </ul>
 
-                        <h2>Third-Party Advertising</h2>
-                        <p>We use Google AdSense and may work with other advertising partners to display ads. These third-party services may use cookies to serve personalized ads based on your browsing activity.</p>
-                        <p>For more details on how Google uses data, visit: <a href="https://policies.google.com/technologies/partner-sites" target="_blank">Google's Privacy & Terms</a>.</p>
+  <h2>Third-Party Advertising</h2>
+  <p>We partner with advertising services such as Google AdSense. These services may use cookies to serve personalized ads based on your browsing history.  
+  Learn more about how Google uses your data here:  
+  <a href="https://policies.google.com/technologies/ads" target="_blank">Google's Privacy & Terms</a></p>
 
-                        <h2>Your Data Protection Rights</h2>
-                        <p>You have the right to:</p>
-                        <ul>
-                            <li>Access the personal data we hold about you.</li>
-                            <li>Request correction of any inaccurate data.</li>
-                            <li>Withdraw consent for us to use your data for personalized ads.</li>
-                        </ul>
+  <h2>Your Rights</h2>
+  <ul>
+    <li>Access the personal information we may have about you.</li>
+    <li>Request correction of inaccurate or incomplete information.</li>
+    <li>Opt out of personalized advertising by managing your browser settings or visiting Google Ads Preferences.</li>
+  </ul>
 
-                        <h2>Contact Us</h2>
-                        <p>If you have any questions or concerns regarding this privacy policy, please contact us at <a href="mailto:benhanry542@gmail.com">benhanry542@gmail.com</a>.</p>
+  <h2>Contact Us</h2>
+  <p>If you have any questions or concerns about this Privacy Policy, please contact us at:  <a href="mailto:support76gameshub@gmail.com">support76gameshub@gmail.com</a></p>
+
                     </div>
                 </div>
             </div>
