--- a/about.html
+++ b/about.html
@@ -107,9 +107,19 @@
             <div class="row">
                <div class="col-lg-12">
                   <div class="about-top">
-                     <h2><span>12 Years</span> in Games Experience</h2>
-                     <p>Pastrami picanha pig filet mignon, hamburger landjaeger sirloin pancetta tenderloin tongue doner. Shoulder venison burgdoggen, doner shank short ribs ball tip cupim tongue. Shankle flank kevin pastrami bresaola pig ham. Pork beef venison landjaeger filet mignon.</p>
-                     <p>Chicken doner salami meatloaf picanha, pastrami short ribs kevin. Venison beef burgdoggen pork loin bacon, cow turkey. Hamburger kevin sirloin chuck, meatloaf pig picanha pancetta ham shank rump.</p>
+                     <h1>About Us</h1>
+
+  <p>Welcome to <strong>76 Unblocked Games</strong> — a platform built for players who want freedom when it comes to online gaming.</p>
+  <p>We started this website with a simple goal: to provide access to fun, engaging, and popular games even in places where most gaming websites are blocked. Whether you're at school, college, or work, we believe that a break with your favorite game shouldn’t be restricted.</p>
+
+  <h2>Why We Created This Platform</h2>
+  <p>We know how frustrating it can be when you finally find a game you want to play and suddenly it’s blocked. That’s why <strong>76 Unblocked Games</strong> was built — for students, office workers, and gamers who just want quick fun, no signup, no annoying popups, and no unnecessary drama.</p>
+
+  <h2>Our Mission</h2>
+  <p>Our mission is simple: <strong>Make gaming easy, accessible, and fun for everyone.</strong></p>
+
+  <p>Thank you for being part of this growing community. We’re here to make sure that wherever you are, your favorite games are just one click away.</p>
+
                   </div>
                </div>
                <div class="col-lg-12">
@@ -261,9 +271,10 @@
                      <div class="col-lg-4 col-md-6 col-sm-12">
                          <div class="single-footer">
                              <h3>About us</h3>
-                             <p>Moreover, they ban certain gaming websites and utilize internet filters to restrict others. <br>All gaming sites are blocked by these filters.<br>
-                                 Even though it takes a long time, <br>some gaming websites will get unblocked since it is difficult to prohibit every website on the internet, <br>
-                                 and because <a href="https://76-unblockedgames.github.io">76 Unblocked Games</a> websites are less likely to be blocked.</p>
+                            <p>In addition to blocking specific gaming platforms, internet filters are often used to limit access to many others.<br>
+  These filters typically restrict the majority of gaming websites.<br>
+  However, despite their efforts, some sites eventually become accessible again since it’s nearly impossible to block every website on the internet.<br>
+  Platforms like <a href="https://76-unblockedgames.github.io" target="_blank">76 Unblocked Games</a> are designed to bypass these restrictions and remain available longer than most.</p>
                          </div>
                      </div>
                      <div class="col-lg-5 col-md-6 col-sm-12">
