--- a/contact.html
+++ b/contact.html
@@ -159,8 +159,23 @@
             <div class="row">
                <div class="col-12">
                   <div class="site-heading">
-                     <h2 class="heading_animation">Send <span>Message</span></h2>
-                     <p>blanditiis praesentium voluptatum deleniti atque corrupti.accusamus et iusto odio corrupti.accusamus et iusto odioiusto odio dignissimos ducimus qui blanditiis</p>
+<!--                      <h2 class="heading_animation">Send <span>Message</span></h2> -->
+                   <h1>Contact Us</h1>
+  <p>Have a question, suggestion, or just want to say hello? We’d love to hear from you!</p>
+
+  <div class="contact-box">
+    <h2>Get in Touch</h2>
+    <p><strong>Email:</strong> <a href="mailto:support76gameshub@gmail.com">info@76-unblockedgames.com</a></p>
+  </div>
+
+  <h2>Why Contact Us?</h2>
+  <ul>
+    <li>To report a problem with the website</li>
+    <li>Suggest a new game you want added</li>
+    <li>For general feedback or support</li>
+  </ul>
+
+  <p>We usually respond within 24-48 hours. Thank you for being part of the 76 Unblocked Games community!</p>
                   </div>
                </div>
             </div>
